creating new components on a external file, using components inside components

--- a/components.html
+++ b/components.html
@@ -14,6 +14,15 @@
         v-bind:key='item.id'></todo-item>
       </ol>
     </div>
+
+    <div id='root'>
+      <task>alo</task>
+      <task>vó</task>
+
+      <hr>
+
+      <tasks-list></tasks-list>
+    </div>
     
 
     <script>
@@ -33,5 +42,6 @@
         }
       })
     </script>
+    <script src="components.js"></script>
   </body>
 </html>
